--- a/.github/workflows/master_vlim2196-webapp.yml
+++ b/.github/workflows/master_vlim2196-webapp.yml
@@ -27,6 +27,9 @@ jobs:
           python -m venv venv
           source venv/bin/activate
       
+      - name: Change directory
+        run: cd flask_example
+
       - name: Install dependencies
         run: pip install -r requirements.txt
         
