--- a/.github/workflows/master_vlim2196-webapp.yml
+++ b/.github/workflows/master_vlim2196-webapp.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Change directory
         run: cd flask_example
 
+      - name: Write directory
+        run: ls
+
       - name: Install dependencies
         run: pip install -r requirements.txt
         
