--- a/.github/workflows/master_vlim2196-webapp.yml
+++ b/.github/workflows/master_vlim2196-webapp.yml
@@ -26,15 +26,12 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-      
-      - name: Change directory
-        run: cd flask_example
-
-      - name: Write directory
-        run: ls
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          cd flask_example
+          ls
+          pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
