Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_vlim2196-webapp.yml
+++ b/.github/workflows/master_vlim2196-webapp.yml
@@ -28,9 +28,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: |
-          cd flask_example
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
@@ -68,4 +66,4 @@ jobs:
         with:
           app-name: 'vlim2196-webapp'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6E9DCBDC170F450F8EDA8798D478CCF8 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_71C89C0C257A4686B6FFA0C60A766755 }}
