--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,19 +9,61 @@ stages:
 - stage: Compilation
   displayName: Compilation stage
   jobs:
-  - job: CompilationJob
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '$(pythonVersion)'
-      displayName: 'Use Python $(pythonVersion)'
+    build:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
 
-    - script: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-      displayName: 'Install dependencies'
+        - name: Set up Python version
+          uses: actions/setup-python@v1
+          with:
+            python-version: '3.9'
 
-    - script: python -m py_compile app.py
-      displayName: 'Test compilation'
+        - name: Create and start virtual environment
+          run: |
+            python -m venv venv
+            source venv/bin/activate
+        
+        - name: Install dependencies
+          run: |
+            cd flask_example
+            ls
+            pip install -r requirements.txt
+          
+        # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+
+        - name: Zip artifact for deployment
+          run: zip release.zip ./* -r
+
+        - name: Upload artifact for deployment jobs
+          uses: actions/upload-artifact@v3
+          with:
+            name: python-app
+            path: |
+              release.zip
+              !venv/
+
+    deploy:
+      runs-on: ubuntu-latest
+      needs: build
+      environment:
+        name: 'Production'
+        url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      
+      steps:
+        - name: Download artifact from build job
+          uses: actions/download-artifact@v3
+          with:
+            name: python-app
+
+        - name: Unzip artifact for deployment
+          run: unzip release.zip
+
+        
+        - name: 'Deploy to Azure Web App'
+          uses: azure/webapps-deploy@v2
+          id: deploy-to-webapp
+          with:
+            app-name: 'vlim2196-webapp'
+            slot-name: 'Production'
+            publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_71C89C0C257A4686B6FFA0C60A766755 }}
